# five-tris

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: main.rs
src/state/: input.rs  mod.rs  piece.rs  queue.rs  update.rs
src/state/active_piece/: mod.rs  movement.rs  projection.rs  rotation.rs
src/state/game/: board.rs  input.rs  mod.rs  queue.rs  rules.jsonc  update.rs
src/state/game/active_piece/: mod.rs  movement.rs  rotation.rs  write.rs
src/state/game/rules/: load.rs  mod.rs  shape.rs
src/state/game/view/: mod.rs
src/state/view/: mod.rs
