[package]
name = "five-tris"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[dependencies]
macroquad = "0.4.1"
rand = "0.8.5"
cold-clear = { git = "https://github.com/MinusKelvin/cold-clear" }
fumen = "0.1.2"
serde = { version = "1.0.174", features = ["derive"] }
serde_jsonc = "1.0.103"
